# pojo2podo_cplusplus

./: CMakeLists.txt
src/: class_builder.h  class_parser.h  class_property.h  dart_class_builder.cpp  dart_class_builder.h  dart_property.cpp  dart_property.h  java_parser.cpp  java_parser.h  java_property.cpp  java_property.h  main.cpp  parsed_result.h  string_manip.cpp  string_manip.h
